<resources>
    <string name="app_name">Pikachu Wishlist</string>
    <string name="title_app">Pika Wishlist</string>
    <string name="load_more_text">Add</string>
    <string name="item_text">I wish to get a…</string>
    <string name="store_or_url_text">Store or URL</string>
    <string name="currency_hint">25.00</string>
    <string name="something_for_options">Something For options</string>
</resources>