<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/backgroundAccent2"
        android:text="@string/title_app"
        android:paddingVertical="4dp"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishReciclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="100dp"
        android:background="@color/background"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- First Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- First Item - EditText -->
            <EditText
                android:id="@+id/editTextStoreOrURL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:paddingHorizontal="10dp"
                android:autofillHints="amazon.com"
                android:background="@drawable/rounded_text_background"
                android:textSize="16sp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginVertical="4dp"
                android:ems="10"
                android:hint="@string/store_or_url_text"
                android:inputType="textUri|text" />

            <!-- Second Item - Horizontal LinearLayout for Currency -->
            <LinearLayout
                android:id="@+id/linearCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/rounded_text_background"
                android:gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:layout_marginVertical="4dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <!-- EditText for Currency -->
                <EditText
                    android:id="@+id/editTextCurrency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:textSize="16sp"
                    android:hint="@string/currency_hint"
                    android:inputType="numberDecimal" />

                <!-- Spinner for Currency Selection -->
                <Spinner
                    android:id="@+id/currencySpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    android:paddingEnd="8dp" />
            </LinearLayout>
        </TableRow>

        <!-- Second Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- EditText -->
            <EditText
                android:id="@+id/editTextWish"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:textSize="20sp"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="4dp"
                android:layout_marginVertical="4dp"
                android:autofillHints="amazon.com"
                android:background="@drawable/rounded_text_background"
                android:gravity="center|start"
                android:hint="@string/item_text"
                android:inputType="text" />

            <!-- Button -->
            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"

                android:text="@string/load_more_text"
                android:textColor="@color/textAccent"
                app:backgroundTint="@color/backgroundAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/camera_activity_frameLayout"
                app:shapeAppearance="@style/CardView.Dark"
                app:strokeWidth="1dp" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
